aga-branch/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border: 0;
  color: black;
}

.container {
  height: 100dvh;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

button {
  background-color: white;
}

.game-board .row:nth-child(1),
.game-board .row:nth-child(2) {
  border-bottom: 3px solid black;
}

.row .square:nth-child(2) {
  border-left: 3px solid black;
  border-right: 3px solid black;
}

.square:disabled {
  color: black;
}

.winning-square {
  background-color: red;
  color: white !important;
}

.moves-container{
  display: flex;
  flex-direction: column;
  /* min-height: 300px;
  min-width: 130px; */
  justify-content: center;
  align-items: center;
}

.game {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}


@media only screen and (max-width: 600px) {
  .container {
    flex-direction: column;
  }

  .moves-container{
    justify-content: start;
  }
}

